# fun_with_pandas

./: pyproject.toml
fun_with_pandas/: vg-stats.ipynb
tests/: test_fun_with_pandas.py
